# CrossPlatform_Tool

./: CMakeLists.txt  Readme.md  android-build-lib.bat  android-build.bat  build.sh  ios-build-lib.sh  windows-build-lib.bat  windows-build.bat
Test/: CMakeLists.txt  main.cpp
include/: MyTool.h
include/Math/: MyMath.h
include/android/: MyTool.java
include/ios/: MyToolLibrary.h
src/: MyTool.cpp
src/android/: MyToolJNI.cpp
src/ios/: MyToolLibrary.mm
src/math/: MyMath.cpp
test/android/app/src/main/java/com/: MyTool.java
test/android/app/src/main/java/com/example/test/: MainActivity.java
test/android/app/src/main/res/layout/: activity_main.xml
test/android/gradle/wrapper/: gradle-wrapper.properties
test/ios/test/test/: AppDelegate.swift  SceneDelegate.swift  ViewController.swift
test/ios/test/test.xcodeproj/: project.pbxproj
test/ios/test/test.xcodeproj/project.xcworkspace/xcuserdata/kai.xcuserdatad/: UserInterfaceState.xcuserstate
test/ios/test/test/Base.lproj/: Main.storyboard
test/ios/test/test/lib/: MyToolLibrary
test/ios/test/test/lib/Modules/: module.modulemap
test/ios/test/test/lib/MyToolLibrary.framework/: Info.plist  MyToolLibrary
test/ios/test/test/lib/MyToolLibrary.framework/Headers/: MyToolLibrary.h
test/windows/: CMakeLists.txt  main.cpp  windows-build.bat
test/windows/include/: MyTool.h
test/windows/lib/: MyTool.lib
